fixed too big radio-button label UX#1

--- a/blocks/radio/_radio.scss
+++ b/blocks/radio/_radio.scss
@@ -15,6 +15,8 @@
   line-height: 18px;
   font-size: 14px;
 
+  height: fit-content;
+
   cursor: pointer;
 
   position: relative;
